# VK_alg

./: CMakeLists.txt  README.md
include/: task.h  task1.h  task10.h  task11.h  task12.h  task13.h  task14.h  task15.h  task16.h  task17.h  task2.h  task3.h  task4.h  task5.h  task6.h  task7.h  task8.h  task9.h
src/: main.cpp  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task16.cpp  task17.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
test/: task_test1.cpp  task_test10.cpp  task_test11.cpp  task_test12.cpp  task_test13.cpp  task_test14.cpp  task_test15.cpp  task_test16.cpp  task_test17.cpp  task_test2.cpp  task_test3.cpp  task_test4.cpp  task_test5.cpp  task_test6.cpp  task_test7.cpp  task_test8.cpp  task_test9.cpp
